# ostep-homework

./: .gitignore  Dockerfile  Makefile
homework/: Makefile  counter_v1  fork.c  lock_results.csv  locks_analysis.ipynb  locks_counter_no_lock.c  locks_counter_v1.c  locks_counter_v2_approximate_counter.c  locks_counter_v3_approximate_counter.c  locks_counter_v4_approximate_counter.c  locks_utils.c  locks_utils.h  main-race-loop-fixed.c  memory-user.c  null.c  pipe_example.c  temp.txt  test_and_set.c
homework/producer_consumer/: CMakeLists.txt  Makefile
homework/producer_consumer/src/: CMakeLists.txt  main.c  utils.c  utils.h
threads-api/: Makefile  main-deadlock.c  main-race-loop-fixed.c  main-race-loop.c  main-signal-cv.c
